exports[`test Should show the component 1`] = `
<svg
  height="800"
  id="stage"
  width="800">
  <g>
    <rect
      className="not-in-focus"
      height="100%"
      id="chaos"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      width="100%" />
    <text
      className="area-label"
      id="label-chaos"
      text-anchor="middle"
      textAnchor="middle"
      x="50%"
      y="20">
      chaos
    </text>
  </g>
  <g>
    <circle
      className="not-in-focus"
      cx="50%"
      cy="50%"
      height="50%"
      id="stretch"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      r="33%"
      width="50%" />
    <text
      className="area-label"
      id="label-stretch"
      text-anchor="middle"
      textAnchor="middle"
      x="50%"
      y="20%">
      stretch
    </text>
  </g>
  <g>
    <circle
      className="not-in-focus"
      cx="50%"
      cy="50%"
      height="50%"
      id="stretch"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      r="15%"
      width="50%" />
    <text
      className="area-label"
      id="label-stretch"
      text-anchor="middle"
      textAnchor="middle"
      x="50%"
      y="50%">
      comfort
    </text>
  </g>
  <g
    id="users">
    <g
      className="user-group">
      <rect
        className="not-in-focus"
        height="90"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        width="800"
        x="0"
        y={60} />
      <text
        className="username"
        x="60"
        y={60}>
        Adam Hall
      </text>
    </g>
    <g
      className="user-group">
      <rect
        className="not-in-focus"
        height="90"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        width="800"
        x="0"
        y={150} />
      <text
        className="username"
        x="60"
        y={150}>
        Caroline Hall
      </text>
    </g>
  </g>
</svg>
------------HTML PREVIEW---------------
<svg
  height="800"
  id="stage"
  width="800"
>
  <g>
    <rect
      class="not-in-focus"
      height="100%"
      id="chaos"
      width="100%"
    >
    </rect>
    <text
      class="area-label"
      id="label-chaos"
      text-anchor="middle"
      textAnchor="middle"
      x="50%"
      y="20"
    >
      chaos
    </text>
  </g>
  <g>
    <circle
      class="not-in-focus"
      cx="50%"
      cy="50%"
      height="50%"
      id="stretch"
      r="33%"
      width="50%"
    >
    </circle>
    <text
      class="area-label"
      id="label-stretch"
      text-anchor="middle"
      textAnchor="middle"
      x="50%"
      y="20%"
    >
      stretch
    </text>
  </g>
  <g>
    <circle
      class="not-in-focus"
      cx="50%"
      cy="50%"
      height="50%"
      id="stretch"
      r="15%"
      width="50%"
    >
    </circle>
    <text
      class="area-label"
      id="label-stretch"
      text-anchor="middle"
      textAnchor="middle"
      x="50%"
      y="50%"
    >
      comfort
    </text>
  </g>
  <g id="users">
    <g class="user-group">
      <rect
        class="not-in-focus"
        height="90"
        width="800"
        x="0"
      >
      </rect>
      <text
        class="username"
        x="60"
      >
        Adam Hall
      </text>
    </g>
    <g class="user-group">
      <rect
        class="not-in-focus"
        height="90"
        width="800"
        x="0"
      >
      </rect>
      <text
        class="username"
        x="60"
      >
        Caroline Hall
      </text>
    </g>
  </g>
</svg>
`;

exports[`test Should show the component 2`] = `
<svg
  height="800"
  id="stage"
  width="800">
  <g>
    <rect
      className="not-in-focus"
      height="100%"
      id="chaos"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      width="100%" />
    <text
      className="area-label"
      id="label-chaos"
      text-anchor="middle"
      textAnchor="middle"
      x="50%"
      y="20">
      chaos
    </text>
  </g>
  <g>
    <circle
      className="not-in-focus"
      cx="50%"
      cy="50%"
      height="50%"
      id="stretch"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      r="33%"
      width="50%" />
    <text
      className="area-label"
      id="label-stretch"
      text-anchor="middle"
      textAnchor="middle"
      x="50%"
      y="20%">
      stretch
    </text>
  </g>
  <g>
    <circle
      className="not-in-focus"
      cx="50%"
      cy="50%"
      height="50%"
      id="stretch"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      r="15%"
      width="50%" />
    <text
      className="area-label"
      id="label-stretch"
      text-anchor="middle"
      textAnchor="middle"
      x="50%"
      y="50%">
      comfort
    </text>
  </g>
  <g
    id="users">
    <g
      className="user-group">
      <rect
        className="in-focus"
        height="90"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        width="800"
        x="0"
        y={60} />
      <text
        className="username"
        x="60"
        y={60}>
        Adam Hall
      </text>
    </g>
    <g
      className="user-group">
      <rect
        className="not-in-focus"
        height="90"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        width="800"
        x="0"
        y={150} />
      <text
        className="username"
        x="60"
        y={150}>
        Caroline Hall
      </text>
    </g>
  </g>
</svg>
------------HTML PREVIEW---------------
<svg
  height="800"
  id="stage"
  width="800"
>
  <g>
    <rect
      class="not-in-focus"
      height="100%"
      id="chaos"
      width="100%"
    >
    </rect>
    <text
      class="area-label"
      id="label-chaos"
      text-anchor="middle"
      textAnchor="middle"
      x="50%"
      y="20"
    >
      chaos
    </text>
  </g>
  <g>
    <circle
      class="not-in-focus"
      cx="50%"
      cy="50%"
      height="50%"
      id="stretch"
      r="33%"
      width="50%"
    >
    </circle>
    <text
      class="area-label"
      id="label-stretch"
      text-anchor="middle"
      textAnchor="middle"
      x="50%"
      y="20%"
    >
      stretch
    </text>
  </g>
  <g>
    <circle
      class="not-in-focus"
      cx="50%"
      cy="50%"
      height="50%"
      id="stretch"
      r="15%"
      width="50%"
    >
    </circle>
    <text
      class="area-label"
      id="label-stretch"
      text-anchor="middle"
      textAnchor="middle"
      x="50%"
      y="50%"
    >
      comfort
    </text>
  </g>
  <g id="users">
    <g class="user-group">
      <rect
        class="in-focus"
        height="90"
        width="800"
        x="0"
      >
      </rect>
      <text
        class="username"
        x="60"
      >
        Adam Hall
      </text>
    </g>
    <g class="user-group">
      <rect
        class="not-in-focus"
        height="90"
        width="800"
        x="0"
      >
      </rect>
      <text
        class="username"
        x="60"
      >
        Caroline Hall
      </text>
    </g>
  </g>
</svg>
`;
